# openeo-udp

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/prompts/: plan-openEoPerNotebookParameterRegistrySystem.prompt.md
.github/workflows/: check_algorithm_exist.yml  register_algorithm.yml
algorithm_registration/: populate_record.py  records_template.json  register_algorithm.py
algorithm_registration/agriculture_growth_stage/openeo_udp/: agriculture_growth_stage.json
algorithm_registration/agriculture_growth_stage/records/: agriculture_growth_stage.json
algorithm_registration/apa_aquatic_plants_algae/openeo_udp/: apa_aquatic_plants_algae.json
algorithm_registration/apa_aquatic_plants_algae/records/: apa_aquatic_plants_algae.json
algorithm_registration/bais2_burned_area/openeo_udp/: bais2_burned_area.json
algorithm_registration/bais2_burned_area/records/: bais2_burned_area.json
algorithm_registration/fapar/openeo_udp/: fapar.json
algorithm_registration/fire-boundary/openeo_udp/: fire-boundary.json
algorithm_registration/fire-boundary/records/: fire-boundary.json
algorithm_registration/fire_boundary/openeo_udp/: fire_boundary.json
algorithm_registration/fire_boundary/records/: fire_boundary.json
algorithm_registration/hollstein_cloud_detection/openeo_udp/: hollstein_cloud_detection.json
algorithm_registration/hollstein_cloud_detection/records/: hollstein_cloud_detection.json
algorithm_registration/leaf_area_index/openeo_udp/: leaf_area_index.json
algorithm_registration/leaf_area_index/records/: leaf_area_index.json
algorithm_registration/monthly_composite/openeo_udp/: monthly_composite.json
algorithm_registration/monthly_composite/records/: monthly_composite.json
algorithm_registration/ndvi_anomaly_detection/openeo_udp/: ndvi_anomaly_detection.json
docs/: parameter-management.md  publication.md
notebooks/sentinel/sentinel-2/land-cover/: ndsi.ipynb  (+4 more)
openeo_udp/: __init__.py  collections.py  parameter_manager.py  validators.py  widgets.py
openeo_udp/config/: __init__.py  endpoint_config.py  endpoints.yaml
openeo_udp/endpoints/: README.md  __init__.py  copernicus_dataspace.py  copernicus_explorer.py  ds_development.py  eopf_explorer.py  localhost_dev.py
openeo_udp/mappers/: __init__.py  copernicus_dataspace.py  copernicus_explorer.py  default.py  ds_development.py
src/: setup.py
templates/: generic_openeo_notebook.ipynb  simple_openeo_notebook.ipynb
tests/: test_parameter_management.py
(+62 files in other folders)
